style.css
html,
body,
#main-container {
  height: 100%;
}

body {
  margin: 0;
  font-family: Source Sans Pro, sans-serif;
  --bs-body-font-family: "Source Sans Pro", sans-serif; /* Override Bootstrap's body font-family */
}

#image-container {
  /* flex: 1; */
  height: 81%;
  top: 0px;
  position: fixed;
  width: 100%;
}

#image-slider {
  height: 100%;
  display: flex;
  justify-content: left;
  align-items: center;
  margin-left: 10px;
  margin-right: 10px;
}

#image-slider img {
  height: 80%;
  width: auto;
  border: 5px solid transparent;
}

#image-slider img.selected {
  border: 5px solid #e6d091;
}

#poweredbyShopXR {
  font-family: HelveticaNeue-Light, Helvetica;
  font-size: 11px;
  background-color: #ffffff;
  color: #7f7f7f;
  height: 4%;
  width: 100%;
  left: 0px;
  bottom: 0px;
  position: fixed;
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 8;
}

/* Style the scrollbar track */
::-webkit-scrollbar {
  height: 8px;
  border-radius: 10px; /* Adjust the border radius as needed */
}

/* Style the scrollbar thumb */
::-webkit-scrollbar-thumb {
  background-color: #888888; /* Color of the thumb */
  border-radius: 10px; /* Radius of the thumb */
}

/* Style the scrollbar thumb on hover */
::-webkit-scrollbar-thumb:hover {
  background-color: #555555; /* Color on hover */
}

@media (max-width: 767px) {
  [data-container="floor-plan"] {
    transform: scale(3);
    transform-origin: top left;
  }
}

